Fix #15: slowmode visibility

--- a/scss/main/_chatbox.scss
+++ b/scss/main/_chatbox.scss
@@ -190,3 +190,11 @@
         }
     }
 }
+
+// Under chat box
+.base-3bcbY3 {
+    // Slowmode
+    .cooldownWrapper-2k1jHK {
+        color: $black !important;
+    }
+}
